<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Red</string>
    <string name="description">The app will try to redirect outgoing calls to Signal/Telegram/Threema if available. For work it requires many permissions. Click on the toggle and grant permissions until it turns ON.</string>
    <string name="popup">Redirecting to %1$s</string>
    <string name="destination_signal">Signal</string>
    <string name="destination_telegram">Telegram</string>
    <string name="destination_threema">Threema</string>
    <string name="redirection_delay_description">Delay before a call will be redirected.</string>
    <string name="popup_position">Popup position</string>
    <string name="fallback">Fallback</string>
    <string name="fallback_description">Redirect to WhatsApp/Viber if no other available.</string>
    <string name="fallback_destination_whatsapp">WhatsApp</string>
    <string name="fallback_destination_viber">Viber</string>
</resources>